# uwac-site

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
archery/: urls.py  wsgi.py
archery/components/: bower.json
archery/settings/: .gitignore  .postgres.env.example  .uwac-site.env.example  base.py  dev.py  production.example.py  storage_backends.py
archery/templates/: 404.html  500.html  base.html
frontend/: package-lock.json  package.json  webpack.config.js
frontend/src/: index.js
frontend/src/js/: gallery.js
frontend/src/scss/: _custom.scss  _settings.scss  app.scss
home/: image_operations.py  models.py  wagtail_hooks.py
home/migrations/: 0003_footer.py  0004_auto_20170918_1114.py  0005_blogpage.py  0006_blogpage_excerpt.py  0007_auto_20170921_2306.py  0008_auto_20170922_2206.py  0009_galleryindexpage_description.py  0010_auto_20170926_1649.py  0011_homepage_cover_image_credit.py  0012_auto_20171221_1847.py  0013_auto_20171223_1526.py  0014_auto_20171223_1946.py  0015_auto_20171223_1950.py  0016_contentpage.py  0017_remove_contentpage_date.py  0018_auto_20180114_2142.py  0019_auto_20180114_2145.py  0020_auto_20180114_2147.py  0021_auto_20180204_1657.py  0022_alter_blogpage_body_alter_contentpage_body_and_more.py
home/templates/home/: blog_page.html  content_page.html  gallery_index_page.html  gallery_page.html  (+1 more)
home/templatetags/: base_tags.py
static/: ieconfig.xml  robots.txt
static/js/: gallery.js  gallery.min.js
static/scss/: _custom.scss  _settings.scss  app.scss
(+6 files in other folders)
