[tool.poetry]
name = "uwac-site"
version = "1.0.0"
description = "The website for the University of Warwick Archery Club"
authors = ["David <david@tankski.co.uk>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2.25"
wagtail = "2.16.3"
djangorestframework = "3.11.1"
django-environ = "^0.10.0"
psycopg2 = "2.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
