[tool.poetry]
name = "uwac-site"
version = "1.0.0"
description = "The website for the University of Warwick Archery Club"
authors = ["David <david@tankski.co.uk>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
django = "5.0.3"
wagtail = "6.0.1"
djangorestframework = "3.14.0"
django-environ = "0.11.2"
psycopg2 = "2.8.6"
django-storages = "^1.14.2"
boto3 = "^1.34.59"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
